# xidea

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
apps/agent/: .env.example  README.md  pyproject.toml
apps/agent/output/: xidea-agent.db
apps/agent/output/materials/project-1776654302065/: material-96b52369c5.md
apps/agent/output/materials/project-rag-demo/: material-479649b3ce.md  material-e336c64e22.md
apps/agent/src/xidea_agent/: __init__.py  __main__.py  activity_choices.py  activity_results.py  api.py  consolidation.py  graph.py  guardrails.py  knowledge_points.py  llm.py  material_content.py  material_reader.py  project_bootstrap.py  repository.py  review_engine.py  runtime.py  session_orchestration.py  state.py  tools.py
apps/agent/tests/: conftest.py  test_api.py  test_graph.py  test_llm.py  test_llm_integration.py  test_real_llm.py  test_repository.py  test_review_engine.py  test_runtime.py  test_session_orchestration.py  test_tools.py
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: README.md  agent-memory.md  agent-state-design.md  architecture.md  backlog.md  collaboration-playbook.md  collaboration.md  competition-defense-kit.md  demo-showcase-strategy.md  plan.md  product-brief.md  scientific-review-integration.md  spec.md  status.md  tech-stack.md
docs/archive/: collaboration.md  decision-log-history.md  (+1 more)
src/: styles.css
src/app/: App.tsx
(+147 files in other folders)
