[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xidea-agent"
version = "0.1.0"
description = "Python orchestration core for Xidea"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "openai>=1.0.0",
  "pydantic>=2.9.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
